# phase3-w25-GR20

./: Phase 3 - Documentation.docx
phase2-w25-GR20-main/: Phase 2 - Documentation.docx
phase2-w25-GR20-main/phase2-w25/: CMakeCache.txt  cmake_install.cmake  runner.bat
phase2-w25-GR20-main/phase2-w25/include/: lexer.h
phase2-w25-GR20-main/phase2-w25/src/lexer/: lexer.c
phase2-w25-GR20-main/phase2-w25/src/parser/: parser.c
phase2-w25-GR20-main/phase2-w25/test/: input_invalid.txt
phase3-w25-GR20-main/: runner.bat
phase3-w25-GR20-main/phase3-w25/: CMakeLists.txt  build.ninja
phase3-w25-GR20-main/phase3-w25/documentation/: README.md
phase3-w25-GR20-main/phase3-w25/include/: parser.h  semantic.h  tokens.h
phase3-w25-GR20-main/phase3-w25/src/lexer/: lexer.c
phase3-w25-GR20-main/phase3-w25/src/parser/: parser.c
phase3-w25-GR20-main/phase3-w25/src/semantic_analyzer/: semantic.c
phase3-w25-GR20-main/phase3-w25/test/: input_invalid.txt  input_valid.txt
